--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
     "url": "https://github.com/xneon2/Hashzi-X/issues"
   },
   "homepage": "https://github.com/xneon2/Hashzi-X#readme",
+  "homepage": "https://github.com/xneon2/Hashzi-X#readme",
   "dependencies": {
-    "@adiwajshing/baileys": "3.5.2",
+    "@adiwajshing/baileys": "3.4.1",
     "@lh2020/speedtest-net": "^2.1.1",
     "browser-id3-writer": "^4.4.0",
     "apk-downloader": "^1.0.2",
@@ -35,7 +36,6 @@
     "chalk": "^4.1.0",
     "coffeehouse": "^2.0.0",
     "cwebp": "^2.0.5",
-    "spdl-core": "^2.0.2",
     "search-engine-client": "^1.2.6",
     "deepai": "^1.0.17",
     "cwebp-bin": "^6.1.1",
@@ -68,6 +68,6 @@
     "translatte": "^3.0.0",
     "wikijs": "^6.0.1",
     "yt-search": "^2.7.4",
-    "ytdl-core": "^4.8.2"
+    "ytdl-core": "^4.9.1"
   }
 }
