--- a/Amazone/Dockerfile
+++ b/Amazone/Dockerfile
@@ -2,6 +2,7 @@ FROM fusuf/whatsasena:latest
 
 RUN git clone https://github.com/QpyaXmtai/Akshseekab /root/Akshseekab
 WORKDIR /root/Akshseekab/
+RUN git clone https://github.com/tenuh/Config
 RUN git clone https://github.com/jesonpro/Angela-x
 ENV TZ=Europe/Istanbul
 RUN npm install supervisor -g
